bug fix overflow-x

--- a/app/scss/_globals.scss
+++ b/app/scss/_globals.scss
@@ -18,6 +18,7 @@ body {
     line-height: 1.3;
     color: $grayishBlue;
     min-height: 400vh;
+    overflow-x: hidden;
     @include breakpoint-up(large) {
         font-size: $font-md;
     }
