--- a/app/scss/main.css
+++ b/app/scss/main.css
@@ -94,6 +94,7 @@ body {
   line-height: 1.3;
   color: #9698a6;
   min-height: 400vh;
+  overflow-x: hidden;
 }
 
 @media (min-width: 64em) {
